# cgran-backup

cmu_macs/trunk/src/apps/: Makefile.am  data  rx_file.cc  tmac_basestation.cc  tx_file.cc
cmu_macs/trunk/src/lib/: Makefile.am  cmac.cc  cmac.h  cmac.mbh  cmac_framer.cc  cmac_framer.h  cmac_symbols.h  gmsk.cc  gmsk.h  gmsk.mbh  gmsk_mbh.cc  gmsk_symbols.h  mac.cc  mac.h  mac_symbols.h  tmac.cc  tmac.h  tmac.mbh  tmac_framer.cc  tmac_framer.h  tmac_mbh.cc  tmac_symbols.h
dabp/trunk/: configure  (+6 more)
dabp/trunk/lib/: Makefile.am  Makefile.in  dabp_crc16.cc  dabp_crc16.h  dabp_d2f.cc  dabp_d2f.h  dabp_depuncturer.cc  dabp_depuncturer.h  dabp_depuncturer_fic.cc  dabp_depuncturer_fic.h  dabp_fib_constants.h  dabp_fib_sink.cc  dabp_fib_sink.h  dabp_fic_msc_demux.cc  dabp_fic_msc_demux.h  dabp_firecode.cc  dabp_firecode.h  dabp_freq_interleaver.cc  dabp_freq_interleaver.h  dabp_galois.cc  dabp_galois.h  dabp_moving_sum_ff.cc  dabp_moving_sum_ff.h  dabp_ofdm_demod.cc  dabp_ofdm_demod.h  dabp_parameters.cc  dabp_parameters.h  dabp_rscodec.cc  dabp_rscodec.h  dabp_scrambler.cc  dabp_scrambler.h  dabp_subchannel_selector.cc  dabp_subchannel_selector.h  dabp_super_frame_rsdec.cc  dabp_super_frame_rsdec.h  dabp_super_frame_sink.cc  dabp_super_frame_sink.h  dabp_super_frame_sync.cc  dabp_super_frame_sync.h  dabp_test_grbuf.cc  (+12 more)
foi_mimo/trunk/lib/: Makefile.am  foimimo_byte_2_chunk.cc  foimimo_byte_2_chunk.h  foimimo_chunk_2_byte.cc  foimimo_chunk_2_byte.h  foimimo_chunk_2_byte_skip_head.cc  foimimo_chunk_2_byte_skip_head.h  foimimo_crc32_checker_sink.cc  foimimo_crc32_checker_sink.h  foimimo_crc32_inserter.cc  foimimo_crc32_inserter.h  foimimo_descrambler_bb.cc  foimimo_descrambler_bb.h  foimimo_ofdm_alamouti_frame_acquisition.cc  foimimo_ofdm_alamouti_frame_acquisition.h  foimimo_ofdm_alamouti_tx_cc.cc  foimimo_ofdm_alamouti_tx_cc.h  foimimo_ofdm_demapper.cc  foimimo_ofdm_demapper.h  foimimo_ofdm_frame_acquisition.cc  foimimo_ofdm_frame_acquisition.h  foimimo_ofdm_mapper_bcv.cc  foimimo_ofdm_mapper_bcv.h  foimimo_ofdm_mapper_source.cc  foimimo_ofdm_mapper_source.h  foimimo_ofdm_mimo_frame_sink.cc  foimimo_ofdm_mimo_frame_sink.h  foimimo_scrambler_bb.cc  foimimo_scrambler_bb.h  foimimo_trellis_encoder_bb.cc  foimimo_trellis_encoder_bb.h  foimimo_trellis_metrics_f.cc  foimimo_trellis_metrics_f.h  foimimo_trellis_viterbi_b.cc  foimimo_trellis_viterbi_b.h  test_all.cc
gr_dect/trunk/src/lib/: Makefile  Makefile.am  Makefile.in  dectv1.cc  dectv1.py  dectv2.cc  dectv2.i  dectv2.py  gr_dect_correlate_access_code.cc  gr_dect_correlate_access_code.h  gr_dect_correlate_access_code.i  gr_dect_crc_r.cc  gr_dect_crc_r.h  gr_dect_crc_r.i  gr_dect_framer_sink.cc  gr_dect_framer_sink.h  gr_dect_framer_sink.i
grgpu/branches/testing/lib/: Makefile.am  grgpu_add_const_ff_cuda.cc  grgpu_add_const_ff_cuda.h  grgpu_add_const_ff_cuda_kernel.cu  grgpu_add_const_ff_cuda_kernel.h  grgpu_d2h_c_cuda.cc  grgpu_d2h_c_cuda.h  grgpu_d2h_cuda.cc  grgpu_d2h_cuda.h  grgpu_d2h_cuda_kernel.cu  grgpu_fft_vfc_cuda.cc  grgpu_fft_vfc_cuda.h  grgpu_fft_vfc_cuda_kernel.cu  grgpu_fir_fff_cuda_kernel.cu  grgpu_fir_filter_fff_cuda_kernel.cu  grgpu_h2d_c_cuda.cc  grgpu_h2d_c_cuda.h  grgpu_h2d_cuda.cc  grgpu_h2d_cuda_kernel.cu  grgpu_mul_const_ff_cuda.h  grgpu_resampler_ccf_cuda.cc  grgpu_resampler_fff_cuda.cc  grgpu_resampler_fff_cuda.h  grgpu_sub_const_ff_cuda.cc  grgpu_sub_const_ff_cuda_kernel.cu  grgpu_utils.cu  grgpu_utils.h  qa_grgpu_add_const_ff_cuda.h  qa_grgpu_d2h_cuda.h  qa_grgpu_fft_vfc_cuda.cc  qa_grgpu_fir_fff_cuda.h  qa_grgpu_mul_const_ff_cuda.cc  qa_grgpu_resampler_ccf_cuda.cc  qa_grgpu_resampler_fff_cuda.cc  qa_grgpu_sub_const_ff_cuda.cc  qa_grgpu_sub_const_ff_cuda.h
itplusplus/trunk/gr-itpp/lib/: Makefile.am  itpp_bessel.cc  itpp_bessel.h  itpp_channel_tdl_vcc.cc  itpp_channel_tdl_vcc.h  itpp_egolay.cc  itpp_egolay.h  itpp_hamming.cc  itpp_hamming.h  itpp_reedsolomon.cc  itpp_reedsolomon.h
relay_demonstrator/: Makefile.am  Makefile.common  Makefile.swig  Makefile.swig.gen.t  README  bootstrap  configure.ac  generate-swig-am
relay_demonstrator/config/: gr_python.m4  lf_warnings.m4  openrd_sigplot.m4
relay_demonstrator/docs/: Doxyfile.in  Makefile.am  groups.dox
relay_demonstrator/src/: Makefile.am
relay_demonstrator/src/lib/: Makefile.am
relay_demonstrator/src/lib/openrd/: Makefile.am  __init__.py  bitpack.cc  bitpack.h  block.cc  block.h  block.i  choosek.m  coding.h  coding_type.h  crc16.cc  crc16.h  field_code_type.h  field_coder.cc  field_coder.h  frametime.cc  frametime.h  framing.h  framing_type.h  golay.cc  golaytest.cc  gsm_frame.h  make_golaytable.m  makeblock  makesyncblock  modes.h  modulation.cc  modulation.h  modulation.i  modulation_type.h  noncopyable.h  openrd_debug.cc  openrd_debug.h  pr.i  pr_analyzer_ber_vb.cc  pr_analyzer_ber_vb.h  pr_analyzer_ber_vb.i  pr_analyzer_none_vb.cc  pr_analyzer_none_vb.h  pr_analyzer_none_vb.i  (+155 more)
relay_demonstrator/src/python/: Makefile.am  __init__.py  aaf.py  channel.py  conf.py  cusrp.py  daf.py  dmod.py  link.py  pyblk.py  pyui.py  qa.py  qa_dmod.py  qa_pr_analyzer_ber_vb.py  qa_pr_ber_estimate_b.py  qa_pr_block_coder_none_vbb.py  qa_pr_block_decoder_none_vfb.py  qa_pr_block_merge_vff.py  qa_pr_block_partition_vbb.py  qa_pr_const_mapper_vbc.py  qa_pr_constellation_decoder_cb.py  qa_pr_constellation_softdecoder_vcf.py  qa_pr_daf_logic_vbb.py  qa_pr_data_source_counter.py  qa_pr_data_source_zero.py  qa_pr_deframer_gsm_vcc.py  qa_pr_deframer_none_vcc.py  qa_pr_deframer_simple_vcc.py  qa_pr_dpacket.py  qa_pr_frame_correlator_gsm_bb.py  qa_pr_frame_correlator_none_bb.py  qa_pr_frame_correlator_simple_bb.py  qa_pr_frame_sync_bb.py  qa_pr_frame_sync_cc.py  qa_pr_framer_gsm_vbb.py  qa_pr_framer_none_vbb.py  qa_pr_framer_simple_vbb.py  qa_pr_insert_head.py  qa_pr_mrc_vcc.py  qa_pr_packet_endpoints.py  (+14 more)
relay_demonstrator/src/relay/: channels.py  destnode.py  relay.cfg.template  relaynode.py  run_socket  run_wireless  srcnode.py  start_unit
relay_demonstrator/src/twonode/: channels.py  destnode.py  run_socket  run_wireless  srcnode.py  start_unit  twonode.cfg.template
(+1321 files in other folders)
