# $Id: Makefile.am,v 1.2 2006/09/10 18:07:29 gdt Exp $

bin_SCRIPTS = bbn_80211b_rx.py bbn_80211b_tx.py

grpythondir = $(pythondir)/gnuradio

python_SCRIPTS = \
	bbn_80211b.py \
	bbn_80211b_pkt.py \
	bbn_80211b_rx.py \
	bbn_80211b_tap.py \
	bbn_80211b_test.py \
	bbn_80211b_transmit_path.py \
	bbn_80211b_tx.py
